Refactor AuthService tests for readability and maintainability